--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 before_deploy:
   - git config --local user.name "Travis CI"
   - git config --local user.email "ben@lerchin.com"
-  - export TIMESTAMP=$(date + '%Y%m%d%H%M%S')
+  - export TIMESTAMP=$('%Y%m%d')
   - git add -u
   - git commit -m "Adding results on $TIMESTAMP"
   - export TRAVIS_TAG=$TIMESTAMP
