--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ services:
 - docker
 deploy:
   provider: releases
-  file: "data/videos.json"
-  api_key: $GITHUB_TOKEN
+  file: data/videos.json
+  api_key: "$GITHUB_TOKEN"
   skip_cleanup: true
 before_install:
+- openssl aes-256-cbc -K $encrypted_679655fa46ed_key -iv $encrypted_679655fa46ed_iv
+  -in id_rsa.enc -out id_rsa -d
 - docker build -t mandiberg-painting .
 before_deploy:
 - git config --local user.name "Travis CI"
@@ -14,8 +16,9 @@ before_deploy:
 - export TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
 - git add -u
 - git diff-index --quiet HEAD || git commit -m "Adding results on $TIMESTAMP"
-- git push origin master
+- GIT_SSH_COMMAND="ssh -i $(pwd)/id_rsa" git push origin master
 - export TRAVIS_TAG=$TIMESTAMP
 - git tag $TRAVIS_TAG
 script:
-- docker run -v $(pwd)/data:/root/mandiberg-painting/data -e API_KEY -e CHANNEL_ID mandiberg-painting python getYoutube.py
+- docker run -v $(pwd)/data:/root/mandiberg-painting/data -e API_KEY -e CHANNEL_ID
+  mandiberg-painting python getYoutube.py
