--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ deploy:
   api_key: "$GITHUB_TOKEN"
   skip_cleanup: true
 before_install:
-- openssl aes-256-cbc -K $encrypted_679655fa46ed_key -iv $encrypted_679655fa46ed_iv
-  -in id_rsa.enc -out id_rsa -d
+- openssl aes-256-cbc -K $encrypted_679655fa46ed_key -iv $encrypted_679655fa46ed_iv -in id_rsa.enc -out id_rsa -d
 - docker build -t mandiberg-painting .
 before_deploy:
 - git config --local user.name "Travis CI"
