--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_deploy:
 - git add -u
 - git diff-index --quiet HEAD || git commit -m "Adding results on $TIMESTAMP"
 - git remote rm origin
-- git remote add origin "https://blerchin:$GITHUB_TOKEN@github.com/blerchin/mandiberg-painting.git
+- git remote add origin "https://blerchin:$GITHUB_TOKEN@github.com/blerchin/mandiberg-painting.git"
 - git push origin master
 - export TRAVIS_TAG=$TIMESTAMP
 - git tag $TRAVIS_TAG
