--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,14 @@ before_deploy:
 - git config --local user.name "Travis CI"
 - git config --local user.email "ben@lerchin.com"
 - export TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
-- git add -u
-- git diff-index --quiet HEAD || git commit -m "Adding results on $TIMESTAMP"
-- git remote rm origin
-- git remote add origin "https://blerchin:$GITHUB_TOKEN@github.com/blerchin/mandiberg-painting.git"
-- git push origin master
 - export TRAVIS_TAG=$TIMESTAMP
 - git tag $TRAVIS_TAG
 script:
 - docker run -v $(pwd)/data:/root/mandiberg-painting/data -e API_KEY -e CHANNEL_ID
   mandiberg-painting python getYoutube.py
+- git checkout master
+- git add -u
+- git commit -m "Adding results on $TIMESTAMP"
+- git remote rm origin
+- git remote add origin "https://blerchin:$GITHUB_TOKEN@github.com/blerchin/mandiberg-painting.git"
+- git push origin master
