--- a/.github/workflows/publish-latest.yml
+++ b/.github/workflows/publish-latest.yml
@@ -11,29 +11,30 @@ jobs:
         runs-on: ubuntu-latest
         container: python:3.6.7
         env: 
-            PLAYLIST_ID: 'UUq8slAGrCXTjEy1Kp'
+            PLAYLIST_ID: 'UUq8slAGrCXTjEy1Kp-Y2JwQ'
             API_KEY: ${{ secrets.API_KEY }}
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             GH_USER: ${{ secrets.GH_USER }}
             GH_EMAIL: ${{ secrets.GH_EMAIL }}
         steps:
-            - name: Update git
-              run: apt-get update && apt-get install -y git
+            - name: "update git"
+              run: |
+                apt-get update
+                apt-get install -y software-properties-common
+                add-apt-repository ppa:git-core/ppa
+                apt-get update
+                apt-get install -yf git
             - name: Install dependencies
               run: pip3 install -U python-dotenv==0.1.5 requests==2.7.0
             - uses: actions/checkout@v2
-            - name: Setup Git
-              run: |
-                git config user.name "${GH_USER}"
-                git config user.email "${GH_EMAIL}"
-                git checkout master
-                git remote rm origin
-                git remote add origin "https://blerchin:$GITHUB_TOKEN@github.com/mandiberg/live-study.git
+              with:
+                token: ${{secrets.GITHUB_TOKEN}}
             - name: Pull videos
               run: python getYoutube.py
-            - name: Deploy Files
-              run: |
-                export TIMESTAMP=$(date +'%Y%m%d-%H%M%S')
-                git add -u
-                git diff-index --quiet HEAD || git commit -m "Adding results on $TIMESTAMP"
-                git push origin master
+            - name: Push files
+              uses: EndBug/add-and-commit@v9
+              with:
+                add: "data/videos.json"
+                author_name: "${{secrets.GH_USER}}"
+                author_email: "${{secrets.GH_EMAIL}}"
+                message: "Adding results on $(date +'%Y%m%d-%H%M%S')"
